# research-skills-market

./: .gitignore
config/: grade.yaml
data/: classified_pool_v2_2000_20260228_023502.json  classified_pool_v2_500_20260228_022059.json  curated_market_v2_2000_20260228_023502.json  curated_market_v2_5000_20260228_030107.json  curated_market_v2_500_20260228_022059.json  raw_candidates_v2_2000_20260228_023502.json  raw_candidates_v2_500_20260228_022059.json  repo_link_quality_report.json  sample_classified_pool.json  sample_evaluation_cards.json  sample_raw_candidates.json  source_link_refresh_report.json  test_report_v2.json
docs/: README.md  hot-skills-deconstruction-cn.md  index.html  market-catalog.md  market-showcase-runtime.html  market-showcase-runtime.md  market-showcase-v2-fixed.html  market-showcase-v2.md  market-showcase-v2_2000_20260228_023502.html  market-showcase-v2_2000_20260228_023502.md  market-showcase-v2_5000_20260228_030107.html  market-showcase-v2_5000_20260228_030107.md  market-showcase-v2_500_20260228_022059.html  market-showcase-v2_500_20260228_022059.md  market-showcase.md  multi-agent-operating-guide.md  multi-agent-research-skills-market.md  skill-research-2026-03-04-cn.md  (+1 more)
geoffrey-main/skills/multi-model-research/: SKILL.md  config.yaml  pyproject.toml
geoffrey-main/skills/multi-model-research/prompts/: chairman_synthesis.md  peer_review.md  system_prompts.yaml
geoffrey-main/skills/multi-model-research/scripts/: citation_tracker.py  llm_client.py  research.py
geoffrey-main/skills/multi-model-research/templates/: research_report.md
(+337 files in other folders)
